# onur-rust

./: .containerignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  Makefile  PROTOCOL.md  README.md  TODO.md  container-commands  entrypoint.sh  manifest.scm  prepare.bash  prfix.bash
.github/workflows/: ci.yml  tests.yml
examples/: etc.json  misc.json  settings.toml
src/: actions.rs  commands.rs  database.rs  domain.rs  main.rs  misc.rs  storage.rs
src/actions/: clone.rs  pull.rs
src/commands/: backup.rs  config.rs  grab.rs
src/database/: files.rs  parser.rs
src/domain/: config.rs  project.rs
src/misc/: cli.rs  globals.rs  settings.rs
src/storage/: files.rs  parser.rs
