[package]
name = "onur"
version = "0.2.0"
edition = "2021"
description = "Easily manage multiple FLOSS repositories"
authors = ["EAS Barbosa <easbarba@outlook.com>"]
license = "Apache-2.0"
repository = "https://gitlab.com/easbarba/onur"

[dependencies]
clap = {version = "4.3.21", features = ["derive"]}
git2 = "0.17.2"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
